@@ -32,7 +32,8 @@ class BntFile
     {
         // This is a loop, that reads a ini file, of the type variable = value.
         // It will loop thru the list of the ini variables, and push them into the db.
-        $ini_keys = parse_ini_file ($ini_file, true);
+
+        $ini_keys = BntFile::betterParseIni ($ini_file);
         // We need a way to deal with errors in parse_ini_file here #fixit #todo
 
         $status_array = array();
@@ -40,23 +41,25 @@ class BntFile
         $start_tran_res = $db->beginTransaction (); // We enclose the inserts in a transaction as it is roughly 30 times faster
         BntDb::logDbErrors ($db, $start_tran_res, __LINE__, __FILE__);
 
-        $insert_sql = "INSERT into {$db->prefix}$ini_table (name, category, value, section) VALUES (:config_key, :config_category, :config_value, :section)";
+        $insert_sql = "INSERT into {$db->prefix}$ini_table (name, category, value, section, type) VALUES (:config_key, :config_category, :config_value, :section, :type)";
         $stmt = $db->prepare ($insert_sql);
+
         foreach ($ini_keys as $config_category => $config_line)
         {
-            foreach ($config_line as $config_key => $config_value)
+            foreach ($config_line as $config_key => $type_n_value)
             {
-                if (strpos ($ini_file, 'configset') !== false)
+                $j++;
+                if (strpos ($ini_file, '_config') !== false)
                 {
                     // Import all the variables into the registry
-                    $bntreg->$config_key = $config_value;
+                    $bntreg->$config_key = $type_n_value['value'];
                 }
 
-                $j++;
                 $stmt->bindParam (':config_key', $config_key);
                 $stmt->bindParam (':config_category', $config_category);
-                $stmt->bindParam (':config_value', $config_value);
+                $stmt->bindParam (':config_value', $type_n_value['value']);
                 $stmt->bindParam (':section', $section);
+                $stmt->bindParam (':type', $type_n_value['type']);
                 $result = $stmt->execute ();
                 $status_array[$j] = BntDb::logDbErrors ($db, $result, __LINE__, __FILE__);
             }
@@ -89,6 +92,80 @@ class BntFile
 
             return true;
         }
+    }
+
+    // Very close to a drop-in replacement for parse_ini_file, although without the second parameter
+    // This defaults to the equivalent of "true" for the second param of parse_ini, ie, process sections
+    public static function betterParseIni($file)
+    {
+    	$ini = file ($file, FILE_SKIP_EMPTY_LINES|FILE_IGNORE_NEW_LINES);
+
+    	$container = null;
+    	foreach ($ini as $line)
+    	{
+    		if (substr (trim ($line), 0, 1) === '[' && substr (trim ($line), -1, 1) === ']')
+    		{
+    			$container = trim (substr ($line, 1, -1));
+    			continue;
+    		}
+    		elseif (substr (trim ($line), 0, 1) !== ';' && substr (trim ($line), 0, 2) !== '//')
+    		{
+    			list ($name, $data) = explode ('=', $line, 2);
+    			$name = trim ($name);
+    			$data = trim ($data);
+                $comment = null;
+                if (strpos($data, '//') != 0)
+                {
+                    list ($value, $comment) = explode ('//', $data, 2);
+                }
+                else
+                {
+                    $value = trim ($data);
+                }
+
+    			// Remove any semicolons from the end of the value.
+    			if (substr (trim ($value), -1,1) === ';')
+    			{
+    				$value = substr (trim ($value), 0, -1);
+    			}
+
+    			// Remove Quote Tags from the start and end.
+    			if (substr (trim ($value), 0, 1) === '\'' || substr (trim ($value), 0, 1) === '"')
+    			{
+    				$value = substr (trim ($value), 1);
+    			}
+    			if (substr (trim ($value), -1, 1) === '\'' || substr (trim ($value), -1, 1) === '"')
+    			{
+    				$value = substr (trim ($value), 0, -1);
+    			}
+
+    			$value = trim ($value);
+    			$comment = trim ($comment);
+
+    			// Check for Numeric types (int/long, double/float)
+    			if (is_numeric ($value))
+    			{
+    				$value +=0;
+    			}
+    			elseif (strtolower ($value) === "true" || strtolower ($value) === "false")
+    			{
+    				$value = (strtolower ($value) == "true" ? true : false);
+    				settype ($value, 'bool');
+    			}
+    			elseif (is_string ($value))
+    			{
+    				if (strlen (trim ($value)) == 0)
+    				{
+    					$value = null;
+    				}
+    			}
+    			if (!is_null ($container))
+    			{
+    				$out[$container][$name] = array ('value'=>$value, 'type'=>gettype ($value), 'comment'=>$comment);
+    			}
+    		}
+    	}
+        return $out;
     }
 }
 ?>
