@@ -3,6 +3,7 @@ CREATE TABLE IF NOT EXISTS bnt_gameconfig (
   section varchar(30) COLLATE utf8mb4_unicode_ci NOT NULL DEFAULT 'game',
   `name` varchar(75) COLLATE utf8mb4_unicode_ci NOT NULL,
   category varchar(30) COLLATE utf8mb4_unicode_ci NOT NULL,
+  type varchar(8) COLLATE utf8mb4_unicode_ci NOT NULL,
   `value` varchar(128) COLLATE utf8mb4_unicode_ci NOT NULL,
   PRIMARY KEY (config_id)
 ) ENGINE=InnoDB  DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci AUTO_INCREMENT=1 ;
