@@ -1,3 +1,9 @@
+TheKabal (4 May 2014)
+--------------------------------------
+May the fourth be with you!
+Extended the language and gameconfig schemas to allow types to be stored with variables
+Expanded BntFile to include a better ini parser, which pulls in the variable types along with the variables
+
 TheKabal (3 May 2014)
 --------------------------------------
 Create "Bad" ibank class, to note that it is not our intended style for classes, and needs to be fixed in the future.
